<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="10sp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/author"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/book_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/book_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

        <RadioGroup
            android:id="@+id/rbg_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_pending"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read" />

            <RadioButton
                android:id="@+id/rb_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending" />

            <RadioButton
                android:id="@+id/rb_in_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_use" />
        </RadioGroup>

        <EditText
            android:id="@+id/book_observations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="@string/observations"
            android:inputType="text|textMultiLine"
            android:lines="3"
            android:scrollHorizontally="false"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>

</ScrollView>